# mdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  opencode.json
sample-notes/: architecture.md  obsidian-guide.md  performance-tips.md  readme.md  troubleshooting.md
sample-notes/daily/: 2024-01-15.md
sample-notes/projects/: mobile-app.md  website-redesign.md
sample-notes/reference/: api-best-practices.md  testing-strategy.md
src/: db.rs  extractor.rs  lib.rs  main.rs  scanner.rs
src/query/: compiler.rs  mod.rs  parser.rs  tokenizer.rs
