[package]
name = "mdb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.4", features = ["bundled", "chrono"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
gray_matter = "0.3"
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"

[profile.release]
opt-level = 2
strip = true
